--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</form>
 
 		<footer>
-			<p id="copyright">Copyright The Code Review</p>
+			<p id="copyright"><i>Copyright The Code Review</i></p>
 		</footer>
 	</div>
 	</body>
