Fixed Zip Code input

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<option value="WA">WA</option>
 					<option value="SA">SA</option>
 					<option value="TAS">TAS</option>
-				</select><br>				
-				<label for="zip">Zip Code</label><br>
+				</select>				
+				<label for="zip">Zip Code</label><br id="linebreak">
 				<input type="text" id="zip" name="user_zip">
 			</fieldset>
 
