--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<option value="TAS">TAS</option>
 				</select>				
 				<label for="zip">Zip Code</label><br id="linebreak">
-				<input type="text" id="zip" name="user_zip">
+				<input type="text" id="zip" name="user_zipcode">
 			</fieldset>
 
 			<fieldset id="newsletter">
