Validator fix + background color

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 					<option value="TAS">TAS</option>
 				</select>				
 				<label for="zip">Zip Code</label><br id="linebreak">
-				<input type="text" id="zip" name="user_zipcode">
+				<input type="text" id="zip" name="user_zip">
 			</fieldset>
 
 			<fieldset id="newsletter">
 				<legend>Newsletter</legend>
-				<label for="newsletters">Select the newsletters you would like to receive</label><br>
+				<label for="html_news">Select the newsletters you would like to receive</label><br>
 				<input type="checkbox" id="html_news" name="newsletter_news"><label for="html_news" class="float">HTML News</label><br>
 				<input type="checkbox" id="css_news" name="newsletter_news"><label for="css_news" class="float">CSS News</label><br>
 				<input type="checkbox" id="javascript_news" name="newsletter_news"><label for="javascript_news" class="float">Javascript News</label><br>
 
-				<label for="newsletters">Newsletter format</label><br>
+				<label for="html_format">Newsletter format</label><br>
 				<input type="radio" id="html_format" name="newsletter_format"><label for="html_format" class="float">HTML</label><br>
 				<input type="radio" id="plain_format" name="newsletter_format"><label for="plain_format" class="float">Plain text</label><br>
 
-				<label for="topics">Other topics you'd like to hear about</label><br>
+				<label for="other_topics">Other topics you'd like to hear about</label><br>
 				<textarea id="other_topics" name="other_topics" rows="5"></textarea>
 			</fieldset>
 			<button type="submit">Sign Up</button>
